--- a/fpfilter.cwl.yaml
+++ b/fpfilter.cwl.yaml
@@ -4,7 +4,7 @@ cwlVersion: v1.0
 baseCommand: [perl, /opt/fpfilter.pl, --output, fpfilter.vcf]
 requirements:
   - class: "DockerRequirement"
-    dockerImageId: "opengenomics/fpfilter:latest"
+    dockerPull: "opengenomics/fpfilter:latest"
 inputs:
   vcf-file:
     type: File
